{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 15,
  "lineage": "fb3c0e55-be48-5ac1-7b1e-4eedd3cfd229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f15198e5c8f1a74",
            "domain": "vpc",
            "id": "eipalloc-07f15198e5c8f1a74",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-220-108-58.compute-1.amazonaws.com",
            "public_ip": "3.220.108.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:internet-gateway/igw-0d77a2c64f62af07e",
            "id": "igw-0d77a2c64f62af07e",
            "owner_id": "862311624727",
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MY_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f15198e5c8f1a74",
            "association_id": "eipassoc-0d1339d38804a6d79",
            "connectivity_type": "public",
            "id": "nat-0f38fa1d80494ebd0",
            "network_interface_id": "eni-0e75b3b8e9fddc3b2",
            "private_ip": "10.0.2.30",
            "public_ip": "3.220.108.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaa1f7db0f9d2546"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.public_subnets01",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e140418811827f351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f38fa1d80494ebd0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e140418811827f35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.MY_NAT",
            "aws_route_table.PRIVATE_RT",
            "aws_subnet.public_subnets01",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d77a2c64f62af07e",
            "id": "r-rtb-0b48a8787762b1ab71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b48a8787762b1ab7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_route_table.PUBLIC_RT",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRIVATE_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-0e140418811827f35",
            "id": "rtb-0e140418811827f35",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PUBLIC_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-0b48a8787762b1ab7",
            "id": "rtb-0b48a8787762b1ab7",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAS_PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7c9f4edcbb55ce0",
            "route_table_id": "rtb-0e140418811827f35",
            "subnet_id": "subnet-046981c9fb590fbfa"
          },
          "dependencies": [
            "aws_route_table.PRIVATE_RT",
            "aws_subnet.private_subnets01",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTAS_PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a29859ec44693559",
            "route_table_id": "rtb-0b48a8787762b1ab7",
            "subnet_id": "subnet-0eaa1f7db0f9d2546"
          },
          "dependencies": [
            "aws_route_table.PUBLIC_RT",
            "aws_subnet.public_subnets01",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-046981c9fb590fbfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046981c9fb590fbfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-0d4ed4a8250ec64b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4ed4a8250ec64b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-0eaa1f7db0f9d2546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaa1f7db0f9d2546",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-0ae14e4f519448cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae14e4f519448cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0be14a3f0946caf3f"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MY_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:vpc/vpc-0be14a3f0946caf3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b2da428afd738c5",
            "default_route_table_id": "rtb-02552a1f0be009957",
            "default_security_group_id": "sg-09e15e127c9c14e17",
            "dhcp_options_id": "dopt-073049f9f1a2d79f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be14a3f0946caf3f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02552a1f0be009957",
            "owner_id": "862311624727",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}